Bug 154719 - tooltips in taskbar appearing wrong
Summary: tooltips in taskbar appearing wrong
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 154798 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-12-27 22:41 UTC by Edwin Schepers
Modified: 2007-12-30 11:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Edwin Schepers 2007-12-27 22:41:50 UTC
Version:           svn (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.22-5-default

Hi,
When I mouseover an app in the taskbar, the tooltip appears. When I then click the entry in the taskbar, the tooltip of another app appears (the previous one used apparently).
This happens at least when the state changes from minimized to normal.
Comment 1 Jason Stubbs 2007-12-29 07:18:49 UTC
*** Bug 154798 has been marked as a duplicate of this bug. ***
Comment 2 Jason Stubbs 2007-12-30 11:17:49 UTC
SVN commit 754590 by jstubbs:

Record which tooltip is being shown so that tooltip data updates don't change
which to another widget's tooltip.

BUG: 154719


 M  +12 -4     tooltip.cpp  
 M  +3 -1      tooltip_p.h  
 M  +8 -7      widget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=754590