Record which tooltip is being shown so that tooltip data updates don't change which to another widget's tooltip.

BUG: 154719

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=754590